# curloz-engine

./: CMakeLists.txt  Makefile  Makefile.bk  README.md  imgui.ini
assets/shaders/: animation.frag  animation.vert  assimpShader.frag  assimpShader.vert  fragmentShader.frag  gltFrag.frag  gltVert.vert  mineFraf.frag.bk  mineVert.vert  platform.frag  platform.vert  renderCube.frag  shaderLighting.frag  shaderLighting.vert  shaderObject.frag  shaderObject.vert  vertexShader.vert
backups/: camera.h.bk  lighting.cpp.bk  main.cpp.bk  shaderObject.frag.bk
include/glad/: glad.h  glad.h.gch
include/physics/: core.h  forceGen.h  particle.h  precision.h
include/renderer/: animation.h  animator.h  bone.h  camera.h  entity.h  general.h  gltLoader.h  imageLoader.h  input.h.bk  lighting.h  mesh.h  model.h  renderCube.h  shaders.h
lib/RmlUI/: CMakeCache.txt  Makefile  RmlUiConfig.cmake  cmake_install.cmake  install_manifest.txt  rmlui_sample_animation  rmlui_sample_benchmark  rmlui_sample_bitmap_font  rmlui_sample_custom_log  rmlui_sample_data_binding  rmlui_sample_demo  rmlui_sample_drag  rmlui_sample_effects  rmlui_sample_invaders  rmlui_sample_load_document  rmlui_sample_transform  rmlui_sample_tree_view  rmlui_tutorial_drag  rmlui_tutorial_template
misc/: lighting.cpp  minecraft.cpp  modelLoading.cpp  pressFforRespect.cpp  shader.cpp
src/: animation.cpp  animator.cpp  bone.cpp  camera.cpp  forceGen.cpp  gltLoader.cpp  imageLoader.cpp  model.cpp  platform.cpp  platform.cpp.bk  shaders.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  (+2 more)
(+81 files in other folders)
