cmake_minimum_required(VERSION 3.16)
project(OpenGL)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(glfw3 REQUIRED)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*/*.cpp src/*/*.c)
add_executable(prog ${SOURCES})
target_include_directories(prog PRIVATE include)
target_link_libraries(prog glfw GL dl assimp)
